[gd_scene load_steps=4 format=3 uid="uid://32syoiludbp5"]

[ext_resource type="Script" path="res://scripts/main_screen.gd" id="1_0x0ru"]
[ext_resource type="Texture2D" uid="uid://bggmb4bl8t5tp" path="res://images/background/hamburger.jpg" id="1_gdksk"]
[ext_resource type="AudioStream" uid="uid://btsg45tkgvq8d" path="res://sounds/Restaurant_Ambience _Sound_Effect.mp3" id="3_73c12"]

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x0ru")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 649.0
color = Color(0, 0, 0, 1)

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1.8, 1.53162)
texture = ExtResource("1_gdksk")
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 652.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Start"

[node name="Intro" type="Button" parent="MarginContainer/CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Intro"

[node name="Settings" type="Button" parent="MarginContainer/CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="Exit" type="Button" parent="MarginContainer/CenterContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 100
text = "Zimburger"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_73c12")

[connection signal="pressed" from="MarginContainer/CenterContainer/ButtonContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/ButtonContainer/Intro" to="." method="_on_intro_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/ButtonContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/ButtonContainer/Exit" to="." method="_on_exit_pressed"]
